[project]
name = "docker-python-utils"
description = "Add your description here"
authors = [{ name = "Alex Nørgaard", email = "umbra@abstractumbra.dev" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["msgspec>=0.20.0"]
license = { file = "LICENSE" }
keywords = ["mangadex", "manga", "api", "wrapper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]

[dependency-groups]
dev = ["ruff", "typing-extensions"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.version]
path = "utils/__init__.py"

[tool.hatch.build]
dev-mode-dirs = ["."]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
exclude = [".github/", ".venv/"]
include = ["utils/*", "LICENSE"]
skip-excluded-dirs = false

[tool.hatch.build.targets.wheel]
packages = ["./utils"]

[tool.hatch.build.targets.wheel.sources]
"utils" = "docker_python_utils"

[tool.ruff]
line-length = 125
target-version = "py312"
exclude = ["repos/", ".venv/"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "CPY",
    "D",
    "DOC",
    "EM101",   # in this case this is okay
    "F401",
    "F402",
    "F403",
    "F405",
    "PD011",   # this is not a numpy codebase
    "PERF203",
    "PLC0414", # pyright ruling for `as` imports needed
    "PLR",
    "Q000",
    "RUF001",
    "RUF009",
    "S101",    # assert is used for type checking in this codebase
    "SIM105",
    "TRY003",  # over-eager rule
    "TRY301",  # unrealistic rule
    "UP034",
]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.
"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"


[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = [".venv/"]
